Task/#25 (#26)
* Removed UriMapping class

* Wrote OpenAPI contract

* Added Gradle task to generate API

* Refactored AiController to use Swagger

* Deleted EnumController

* Refactored InvolvementController

* Refactored ProjectController

* Refactored IssuesApi

* Moved Constants class to service package

* Refactored UserController