@@ -11,6 +11,7 @@ plugins {
     id 'java'
     id 'application'
     id 'org.springframework.boot' version '2.4.5'
+    id 'org.hidetake.swagger.generator' version '2.19.2'
 }
 
 group 'org.example'
@@ -63,7 +64,33 @@ dependencies {
     implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.5.3'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.7.3'
+    implementation 'javax.validation:validation-api:2.0.1.Final'
+    // https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations
+    implementation group: 'io.swagger.core.v3', name: 'swagger-annotations', version: '2.2.7'
+    // https://mvnrepository.com/artifact/org.threeten/threetenbp
+    implementation group: 'org.threeten', name: 'threetenbp', version: '1.6.4'
+    swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.36'
 }
+
+swaggerSources {
+    bugsby {
+        inputFile = file("$rootDir/src/main/resources/contract.yaml")
+        code {
+            language = 'spring'
+            configFile = file("$rootDir/src/main/resources/swagger-config.json")
+            components = ['models', 'apis']
+
+            // https://github.com/int128/gradle-swagger-generator-plugin/issues/221
+            jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED']
+
+            dependsOn validation
+        }
+    }
+}
+
+compileJava.dependsOn swaggerSources.bugsby.code
+sourceSets.main.java.srcDir "${swaggerSources.bugsby.code.outputDir}/src/main/java"
+sourceSets.main.resources.srcDir "${swaggerSources.bugsby.code.outputDir}/src/main/resources"
 
 test {
     useJUnitPlatform()
